// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form thunks updateSendBroadcastForm should dispatch form update action 1`] = `
Object {
  "text": Object {
    "value": "Look, a distraction!",
  },
  "valid": true,
}
`;

exports[`form thunks updateStartSessionForm should dispatch form update action 1`] = `
Object {
  "valid": true,
}
`;
